// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

import "mesos/mesos.proto";

package mesos.authorization;

option java_package = "org.apache.mesos.authorization";
option java_outer_classname = "Protos";


// A `Subject` is the entity which desires to execute an `Action` on
// an `Object`. A `Subject` has a number of optional fields (currently
// only a `value`).
// NOTE: A `Subject` should always come with at least one set field.
message Subject {
  optional string value = 1;
}


// An `Object` is the entity on which a `Subject` wishes to execute an
// `Action`. An `Object` has a number of optional fields of which,
// depending on the action, one or more fields must be set. For
// example the `VIEW_EXECUTOR` action expects the `executor_info` and
// `framework_info` field to be set. The `Action` comments explain
// what to expect.
// NOTE: An `Object` should always come with at least one set field.
message Object {
  optional string value = 1;
  optional FrameworkInfo framework_info = 2;
  optional Task task = 3;
  optional TaskInfo task_info = 4;
  optional ExecutorInfo executor_info = 5;
}


// List of authorizable actions supported in Mesos.
enum Action {
  // This must be the first enum value in this list, to
  // ensure that if 'type' is not set, the default value
  // is UNKNOWN. This enables enum values to be added
  // in a backwards-compatible way. See: MESOS-4997.
  UNKNOWN = 0;

  // Actions named *_WITH_foo may set a foo in `Object.value`.
  REGISTER_FRAMEWORK_WITH_ROLE = 1;

  // `RUN_TASK` will have an object with `FrameworkInfo` and `TaskInfo` set.
  RUN_TASK = 2;

  TEARDOWN_FRAMEWORK_WITH_PRINCIPAL = 3;
  RESERVE_RESOURCES_WITH_ROLE = 4;
  UNRESERVE_RESOURCES_WITH_PRINCIPAL = 5;
  CREATE_VOLUME_WITH_ROLE = 6;
  DESTROY_VOLUME_WITH_PRINCIPAL = 7;

  // TODO(zhitao): Remove the following two actions at the end of
  // the deprecation cycle which started with 1.0. They will be
  // fully replaced by `UPDATE_QUOTA_WITH_ROLE`.
  SET_QUOTA_WITH_ROLE = 8;  // [deprecated = true];
  DESTROY_QUOTA_WITH_PRINCIPAL = 9;  // [deprecated = true];

  UPDATE_WEIGHT_WITH_ROLE = 10;
  GET_ENDPOINT_WITH_PATH = 11;
  GET_QUOTA_WITH_ROLE = 12;
  UPDATE_QUOTA_WITH_ROLE = 13;

  // `VIEW_FRAMEWORK` will have an object with a `FrameworkInfo` set.
  VIEW_FRAMEWORK = 14;

  // `VIEW_TASK` will have an object with (`Task` or `TaskInfo`) and
  // `FrameworkInfo` set.
  VIEW_TASK = 15;

  // `VIEW_EXECUTOR` will have an object with `ExecutorInfo` and
  // `FrameworkInfo` set.
  VIEW_EXECUTOR = 16;

  // This action will have a `FrameworkInfo` and `ExecutorInfo` set,
  // allowing both as objects in order to perform authorization.
  ACCESS_SANDBOX = 17;

  // This action will not fill in any object fields, since the object
  // is the master/agent log itself.
  ACCESS_MESOS_LOG = 18;

  GET_WEIGHT_WITH_ROLE = 19;
}


// A `Request` is a <subject, action, object> tuple which can be read
// as "Can `subject` perform `action` with `object`?".
message Request {
  // An unset `subject` means "unspecified".
  optional Subject subject = 1;

  // Enum fields should be optional, see: MESOS-4997.
  optional Action action = 2;

  // An unset `object` means "unspecified".
  optional Object object = 3;
}
